csparser/tests/should_fail/fail000_invalidstatement.cs
using System;
using System.Collections.Generic;
using System.Reflection;

class test
{
	static int Main(String[] args)
	{
		);
//		typeof(List<String>).GetMethod("Add"));
	}
}
